# FusionDLS

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AnalyticCoolingCurves.py  Analytic_Benchmark.ipynb  Analytic_DLS.py  DLS_onefile.m  DLScommonTools.py  Ex. 1 - Basics.ipynb  Ex. 2 - Manipulating profiles.ipynb  Ex. 3 - Advanced post-processing.ipynb  Ex. 4 - Front movement sensitivity.ipynb  Ex. 5 - 2D parameter space scan.ipynb  Iterate.py  LRBv21.py  Lengyel-Reinke-Formulation.py  LengyelReinkeFormulation.py  Morph.py  Postprocess.py  Profile.py  README.dev.md  README.md  ThermalFrontFormulation.py  calc_DLS.m  ddn_geometry.m  eqb_store.pkl  eqb_store_lores.pkl  equilibrium.pkl  example_results.pkl  pyproject.toml  pythonTest.py  refineGrid.py  unpackConfigurations.py  unpackConfigurationsMK.py
.githooks/: pre-commit
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: api.rst  conf.py  index.rst
docs/examples/: 1_basics.ipynb  2_manipulating_profiles.ipynb  3_post_processing.ipynb  4_front_movement_sensitivity.ipynb  5_2D_parameter_space_scan.ipynb  6_analytic.ipynb  analytic_test.ipynb  basic_use.ipynb  geometry_manipulation.ipynb  geqdsk.ipynb
docs/examples/deprecated/: 1_basics.ipynb  4_front_movement_sensitivity.ipynb  5_2D_parameter_space_scan.ipynb
src/fusiondls/: AnalyticCoolingCurves.py  Analytic_DLS.py  DLScommonTools.py  Iterate.py  LRBv21.py  Profile.py  SOLPSreader.py  __init__.py  analytic_cooling_curves.py  cli.py  geometry.py  geqdsk.py  plot.py  postprocessing.py  refineGrid.py  settings.py  solver.py  typing.py  unpackConfigurations.py  unpackConfigurationsMK.py
tests/: test_analytic.py  test_cli.py  test_geometry.py  test_geqdsk.py  test_solver.py
tests/geqdsk_test_files/: README.md
tests/test_files/: README.md  input.toml  test_connected-double-null.eqdsk  test_disconnected-double-null.eqdsk  test_single-null.eqdsk
